Model and persistence packages refactored with Operations and the underlying graph making relationships.